# SoonAPI/Controllers/RoutesController.cs
@@ -34,9 +34,9 @@ using Microsoft.AspNetCore.Mvc;
         {
             bool Status = true;  
             // Check if data was posted
-            if (!String.IsNullOrEmpty(p.Name))
+            if (!String.IsNullOrEmpty(p.Name) && !String.IsNullOrEmpty(p.Map))
             {
-                if (Routes.Add(new Routes(p.Name, Status)))
+                if (Routes.Add(new Routes(p.Name, Status, p.Map)))
                     return Ok(MessageResponse.Get(0, "Ruta registrado correctamente"));
                 else
                     return Ok(MessageResponse.Get(2, "No se pudo completar el registro de la ruta."));
@@ -44,5 +44,53 @@ using Microsoft.AspNetCore.Mvc;
             else
                 return Ok(MessageResponse.Get(1, "Datos del formulario incompletos"));
         }
+
+    [HttpPut("{id}")]
+    public ActionResult Update(string id, [FromForm] PostRoutes updatedRoute)
+    {
+        try
+        {
+            if (!String.IsNullOrEmpty(updatedRoute.Name) && !String.IsNullOrEmpty(updatedRoute.Map))
+            {
+                Routes routeToUpdate = Routes.Get(id);
+                routeToUpdate.Name = updatedRoute.Name;
+                routeToUpdate.Map = updatedRoute.Map;
+
+                if (Routes.Update(routeToUpdate))
+                    return Ok(MessageResponse.Get(0, "Ruta actualizada correctamente"));
+                else
+                    return Ok(MessageResponse.Get(2, "No se pudo actualizar la ruta."));
+            }
+            else
+            {
+                return Ok(MessageResponse.Get(1, "Datos del formulario incompletos"));
+            }
+        }
+        catch (RecordNotFoundException e)
+        {
+            return NotFound(MessageResponse.Get(1, e.Message));
+        }
+        catch (Exception e)
+        {
+            return StatusCode(StatusCodes.Status500InternalServerError, MessageResponse.Get(1, e.Message));
+        }
     }
+
+    [HttpDelete("{id}")]
+    public ActionResult Delete(string id)
+    {
+        try
+        {
+            if (Routes.Delete(id))
+                return Ok(MessageResponse.Get(0, "Ruta eliminada correctamente"));
+            else
+                return NotFound(MessageResponse.Get(1, "Ruta no encontrada"));
+        }
+        catch (Exception e)
+        {
+            return StatusCode(StatusCodes.Status500InternalServerError, MessageResponse.Get(1, e.Message));
+        }
+    }
+
+}
 
